<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.martin.calculadorasimples.MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/controleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/details"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:ems="10"
        android:hint="@string/digite_aqui_titulo"
        android:inputType="text" />

    <EditText
        android:id="@+id/url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:ems="10"
        android:hint="@string/digite_aqui_url"
        android:inputType="text|textUri" />

    <EditText
        android:id="@+id/genre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:ems="10"
        android:hint="@string/digite_aqui_genero"
        android:inputType="text" />

    <EditText
        android:id="@+id/rating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:ems="10"
        android:hint="@string/digite_aqui_avaliacao"
        android:inputType="textUri|numberDecimal" />

    <EditText
        android:id="@+id/releaseYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:ems="10"
        android:hint="@string/digite_aqui_lancamento"
        android:inputType="date" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal">

        <ImageButton
            android:id="@+id/adicaoImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/insertbutton"
            android:src="@android:drawable/ic_input_add" />

        <ImageButton
            android:id="@+id/removerImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/removebutton"
            android:src="@android:drawable/ic_delete" />

    </LinearLayout>

</LinearLayout>